--- a/css/personal.css
+++ b/css/personal.css
@@ -49,8 +49,18 @@ html {
     font-size: 1.3rem;
 }
 
-.navbar-brand {
+#brand{
+    width: 30%;
+    padding: 0;
+}
+
+.navbar-brand div{
+    color: #14b287;
     font-size: 2.0rem;
+    font-family: 'Josefin Slab', serif;
+    font-weight: 700;
+    display: inline;
+    text-shadow: 1px 1px 1px black;
 }
 
 .jumbotron {
@@ -80,8 +90,9 @@ html {
     height: 400px;
 }
 
-.blockquote-footer {
+footer {
     font-size: 2rem;
+    text-shadow: 0px 6px 2px black;
 }
 
 #main {
@@ -129,4 +140,8 @@ p a:hover {
     font-size: 5rem;
     margin: 0 12%;
     color: white;
+}
+
+.logo{
+    width: 18%;
 }
